force-app/main/default/objects/Customer_Payment_Processor_Settings__c/Customer_Payment_Processor_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Customer Payment Processor Settings</description>
    <label>Customer Payment Processor Settings</label>
</CustomObject>