force-app/main/default/objects/Customer_Payment_Processor_Settings__c/fields/Base_URL_for_Payment_Page_Iframe__c.field-meta.xml
<CustomField>
    <fullName>Base_URL_for_Payment_Page_Iframe__c</fullName>
    <description>base URL domain to use in Email template for payment page</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>base URL domain to use in Email template for payment page</inlineHelpText>
    <label>Base URL for Payment Page Iframe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>