force-app/main/default/objects/Customer_Payment_Processor_Settings__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Comment</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Comment</inlineHelpText>
    <label>Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>