force-app/main/default/objects/Customer_Payment_Processor_Settings__c/fields/End_Point__c.field-meta.xml
<CustomField>
    <fullName>End_Point__c</fullName>
    <description>End Point</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>End Point</inlineHelpText>
    <label>End Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>