force-app/main/default/objects/Customer_Payment_Processor_Settings__c/fields/Org_Wide_From_Address__c.field-meta.xml
<CustomField>
    <fullName>Org_Wide_From_Address__c</fullName>
    <description>Org Wide From Address to send email to Customers</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Org Wide From Address to send email to Customers</inlineHelpText>
    <label>Org Wide From Address</label>
    <type>Email</type>
</CustomField>