force-app/main/default/objects/Customer_Payment_Processor_Settings__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>Password</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Password</inlineHelpText>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>