force-app/main/default/objects/Customer_Payment_Processor_Settings__c/fields/Payment_URL_To_Get_Param__c.field-meta.xml
<CustomField>
    <fullName>Payment_URL_To_Get_Param__c</fullName>
    <description>Used to get the substring from payment url to create site payment URL</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Used to get the substring from payment url to create site payment URL</inlineHelpText>
    <label>Payment URL To Get Param</label>
    <length>255</length>
    <type>Text</type>
</CustomField>