force-app/main/default/objects/Customer_Payment_Processor_Settings__c/fields/Signing_Key__c.field-meta.xml
<CustomField>
    <fullName>Signing_Key__c</fullName>
    <description>Signing Key</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Signing Key</inlineHelpText>
    <label>Signing Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>