force-app/main/default/objects/Customer_Payment_Processor_Settings__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>Username</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Username</inlineHelpText>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>